--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="CV Layla Guyot.pdf"><span>My Resume</span></a></li>
-									<li><a class="icon fa-chart-bar" href="Project1.html"><span>Wrangling and Visualizations</span></a></li>
+									<li><a class="icon solid fa-home" href="Steven Yoo Resume.pdf"><span>My Resume</span></a></li>
+									<li><a class="icon fa-chart-bar" href="Project.html"><span>Wrangling and Visualizations</span></a></li>
 									<li><a class="icon solid fa-sitemap" href="Project2.html"><span>Classification and Prediction</span></a></li>
 								</ul>
 							</nav>
